Implement slot filters
The following slot filters are implemented: flightNumber, type, private
Updated openapi doc
