# backend/app/Models/Slot.php
@@ -26,6 +26,13 @@ class Slot extends Model
         'updated_at'
     ];
 
+    public static $allowedQueryParams = [
+        'flightNumber',
+        'aircraft',
+        'type',
+        'private'
+    ];
+
     public function owner()
     {
         return $this->belongsTo(User::class, 'pilotId', 'id');
